@@ -19,6 +19,52 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URL
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Paths
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -98,52 +144,6 @@ operator|.
 name|sax
 operator|.
 name|SAXException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|URL
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|file
-operator|.
-name|Files
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|file
-operator|.
-name|Path
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|file
-operator|.
-name|Paths
 import|;
 end_import
 
@@ -269,6 +269,14 @@ name|String
 name|CLIENT_TAG
 init|=
 literal|"client"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|SUPER_PKG_TAG
+init|=
+literal|"superPkg"
 decl_stmt|;
 specifier|public
 specifier|static
@@ -490,6 +498,15 @@ case|case
 name|CLIENT_TAG
 case|:
 name|createClient
+argument_list|(
+name|data
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|SUPER_PKG_TAG
+case|:
+name|createSuperPkg
 argument_list|(
 name|data
 argument_list|)
@@ -1030,6 +1047,37 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+specifier|private
+name|void
+name|createSuperPkg
+parameter_list|(
+name|String
+name|data
+parameter_list|)
+block|{
+if|if
+condition|(
+name|data
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+return|return;
+block|}
+name|configuration
+operator|.
+name|setSuperPkg
+argument_list|(
+name|data
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|void
