@@ -1185,6 +1185,19 @@ name|isCreatePKProperties
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|view
+operator|.
+name|getSuperPkg
+argument_list|()
+operator|.
+name|setText
+argument_list|(
+name|cgenConfiguration
+operator|.
+name|getSuperPkg
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|updateComboBoxes
 argument_list|()
 expr_stmt|;
