@@ -21,6 +21,76 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JButton
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JCheckBox
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JComboBox
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JPanel
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JTextField
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|BorderLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|FlowLayout
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|jgoodies
@@ -151,26 +221,6 @@ name|ValidationException
 import|;
 end_import
 
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|*
-import|;
-end_import
-
 begin_comment
 comment|/**  * @since 4.1  */
 end_comment
@@ -219,6 +269,10 @@ decl_stmt|;
 specifier|private
 name|JCheckBox
 name|pkProperties
+decl_stmt|;
+specifier|private
+name|TextAdapter
+name|superPkg
 decl_stmt|;
 specifier|private
 name|JButton
@@ -493,6 +547,63 @@ block|}
 block|}
 block|}
 expr_stmt|;
+name|JTextField
+name|superPkgField
+init|=
+operator|new
+name|JTextField
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|superPkg
+operator|=
+operator|new
+name|TextAdapter
+argument_list|(
+name|superPkgField
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|updateModel
+parameter_list|(
+name|String
+name|text
+parameter_list|)
+throws|throws
+name|ValidationException
+block|{
+name|getCgenByDataMap
+argument_list|()
+operator|.
+name|setSuperPkg
+argument_list|(
+name|text
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|codeGeneratorControllerBase
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
+name|projectController
+operator|.
+name|setDirty
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+expr_stmt|;
 name|this
 operator|.
 name|createPropertyNames
@@ -731,6 +842,18 @@ operator|.
 name|nextLine
 argument_list|()
 expr_stmt|;
+name|builder
+operator|.
+name|append
+argument_list|(
+literal|"Superclass package:"
+argument_list|,
+name|superPkg
+operator|.
+name|getComponent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|setLayout
 argument_list|(
 operator|new
@@ -886,6 +1009,15 @@ parameter_list|()
 block|{
 return|return
 name|pkProperties
+return|;
+block|}
+specifier|public
+name|TextAdapter
+name|getSuperPkg
+parameter_list|()
+block|{
+return|return
+name|superPkg
 return|;
 block|}
 block|}
